Add fetch.js from api

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
         </section>
 
-        <section class="acordeon open">
+        <section class="acordeon">
 
             <button class="triger" type="button">
                 <h2>Skills</h2>
@@ -156,6 +156,8 @@
 
     </div>
     <script src="/assets/js/acordeon.js"></script>
+    <script src="/assets/js/api.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
