Changes in JS api and main

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
     <div class="main">
         <header class="header">
 
-            <img src="./assets/images/TESTE.png" alt="perfil-photo" class="photo">
+            <img src="./assets/images/undefinedPerfil.jpg" alt="perfil-photo" class="photo" id="profile.photo">
 
-            <h1 class="title">Olá, me chamo Rafael Eiji</h1>
+            <h1 class="title">Olá, me chamo <span id="profile.name">Carregando...</span></h1>
 
             <div class="information">
-                <p class="job">Em busca de estágio</p>
-                <p class="location">Pindamonhangaba, SP</p>
+                <p class="job" id="profile.job">Carregando...</p>
+                <p class="location" id="profile.location">Carregando...</p>
                 <p class="phone">
-                    <a href="tel:(12) 12312-3123">(12) 12312-3123</a>
+                    <a href="tel:(12) 12312-3123" id="profile.phone">Carregando...</a>
                     <!--Linkar phone para ligar, ou colocar para enviar mensagem whatsapp (https://wa.me/+5512996233983/?text=Olá)-->
                 </p>
                 <p class="email">
-                    <a href="mailto:rafael.cazuo777@gmail.com.br">rafael.cazuo777@gmail.com</a>
+                    <a href="mailto:rafael.cazuo777@gmail.com.br" id="profile.email">Carregando...</a>
                 </p>
             </div>
         </header>
@@ -140,12 +140,12 @@
                     </section>
 
                     <section class="personal">
-                        <h3>Personal</h3>
-                        <ul>
-                            <li>Liderança</li>
-                            <li>Organização</li>
-                            <li>Trabalho em equipe</li>
-                            <li>Flexibilidade</li>
+                        <h3>Personal:</h3>
+                        <ul id="profile.skills.softSkills">
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
                         </ul>
                     </section>
                 </div>
